<resources>
    <string name="app_name">FoucsFlow</string>
    <string name="welcome_to_focus_flow">Welcome to Focus Flow!</string>
    <string name="ready_to_get_back_on_track_your_focus_journey_awaits">Ready to get back on track? Your focus journey awaits</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="login">Login</string>
    <string name="sign_up_here">Sign up here!</string>
    <string name="welcome_to_focusflow">Welcome To FocusFlow</string>
    <string name="join_the_focusflow_family">Join the FocusFlow Family</string>
    <string name="create_your_account_and_take_the_first_step_towards_a_more_productive_you">Create your account and take the first step towards a more productive you</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="please_enter_a_password">Please enter a password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="reigster">Reigster</string>
    <string name="back_to_login_page">Back To Login Page</string>
    <string name="register">Register</string>
    <string name="title_activity_focus_flow">FocusFlow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="calendar">Calendar</string>
    <string name="productivity">Productivity</string>
    <string name="create_a_habit">Create a habit</string>
    <string name="check_your_productivity">Check your productivity</string>
    <string name="diary">Diary</string>
    <string name="start_habit">Start Habit</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="duration_in_minutes">Duration in minutes</string>
    <string name="enter_a_description_of_the_habit">Enter a description of the habit</string>
    <string name="habit_name">Habit Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="enter_how_long_you_would_like_to_work_on_the_habit_in_minutes">Enter how long you would like to work on the habit in minutes</string>
    <string name="enter_the_goal_in_hours">Enter the goal in hours</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="max_time_you_want_to_spend_on_this_habit">Max time you want to spend on this habit</string>
    <string name="author">Author</string>
    <string name="h">h</string>
    <string name="q">q</string>
    <string name="quote">Quote</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="default_web_client_id">455463918438-8tds5hlpaapp31l86ppqid3mdhft68gk.apps.googleusercontent.com</string>
    <string name="ethabitname">Habit Name</string>
    <string name="description">Description</string>
    <string name="your_goal">Your Goal</string>
    <string name="delete_this_habit">Delete this habit</string>
    <string name="edit_this_habit">Edit this Habit</string>
    <string name="enter_the_time_you_worked_on_the_habit_mintues">Enter the time you worked on the habit(mintues)</string>
    <string name="habit_name2">Habit Name</string>
    <string name="description2">Description</string>
    <string name="total_hours_of_habit">Total hours of habit</string>
    <string name="save_entry">Save Entry</string>
    <string name="write_your_diary_entry">Write your diary entry...</string>
    <string name="date_01_01_2024">Date: 01/01/2024</string>
    <string name="btnCompleteHabit">✔</string>
    <string name="btnDeleteHabit">✖</string>
    <string name="Logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="enter_title">Enter Title</string>
    <string name="save_entry2">Save Entry</string>
    <string name="write_your_diary_entry2">Write your diary entry</string>
    <string name="enter_the_title_for_your_diary_entry">Enter the title for your diary entry</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="create_your_own_habit">Create your own habit</string>
    <string name="save_habit">Save Habit</string>
    <string name="create_a_habit_of_your_own">Create a habit of your own!</string>
    <string name="back">Back</string>
    <string name="about_us">About Us</string>
    <string name="focusflow_is_designed_to_help_users_track_their_habits_more_efficiently_with_an_intuitive_interface_and_simple_tools_users_can_build_monitor_and_achieve_their_goals_seamlessly">FocusFlow is designed to help users track their habits more efficiently. With an intuitive interface and simple tools, users can build, monitor, and achieve their goals seamlessly.</string>
    <string name="about_focusflow">About FocusFlow</string>
    <string name="themes">Themes</string>
    <string name="toggle_dark_mode">Toggle Dark Mode</string>
    <string name="congratulations_on_completing_this_habit">Congratulations on Completing this Habit</string>
    <string name="congratulations_on_completing_your_habit">Congratulations on completing your habit!</string>
    <string name="delete">Delete</string>
    <string name="input_time_spent">Input Time Spent</string>
    <string name="unlock_with_biometrics">Unlock with Biometrics</string>
    <string name="authentication_failed_please_try_again">Authentication failed. Please try again.</string>
    <string name="welcome_to_your_personal_diary">Welcome to Your Personal Diary</string>
    <string name="unlock_your_diary_with_biometrics">Unlock your diary with biometrics.</string>
    <string name="it_s_important_to_keep_track_of_your_thoughts_and_progress_writing_them_down_helps_you_reflect_grow_and_stay_on_track_with_your_goals">It\'s important to keep track of your thoughts and progress. Writing them down helps you reflect, grow, and stay on track with your goals.</string>
    <string name="authentication_failed_please_try_again2">Authentication failed. Please try again.</string>
    <string name="habits_created">Habits Created</string>
    <string name="calendar2">Calendar</string>
    <string name="add_event_to_calendar">Add Event to Calendar</string>
    <string name="add_event">Add Event</string>
    <string name="event_description">Event Description</string>
    <string name="save_event_to_calendar">Save Event to calendar</string>
    <string name="event_name">Event Name</string>
    <string name="habit_name_Calendar">Habit Name</string>
    <string name="start_date_end_date">Start Date - End Date</string>
    <string name="habit_name_calendar">Habit Name</string>
    <string name="start_date_end_date_calendar">Start Date - End date</string>
    <string name="focusflow">FocusFlow</string>
    <string name="time_spent">Time Spent</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="zulu">Zulu</string>
    <string name="save_progress">Save Progress</string>
    <string name="habits_for_selected_date">Habits for Selected Date</string>
    <string name="select_a_date">Select a Date</string>



</resources>