<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_work_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/Create"
            android:icon="@drawable/baseline_self_improvement_24"
            android:title="@string/create_a_habit" />


        <item
            android:id="@+id/Diary"
            android:icon="@drawable/baseline_border_color_24"
            android:title="@string/diary" />

        <item
            android:id="@+id/Calendar"
            android:icon="@drawable/baseline_edit_calendar_24"
            android:title="@string/calendar2" />


        <item
            android:id="@+id/aboutUs"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about_us" />


        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_west_24"
            android:title="@string/Logout" />
        </group>
    </menu>