<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/themes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_languages"
        android:orderInCategory="101"
        android:title="@string/select_language"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/language_english"
                android:title="@string/english" />
            <item
                android:id="@+id/language_afrikaans"
                android:title="@string/afrikaans" />
            <item
                android:id="@+id/language_zulu"
                android:title="@string/zulu" />
        </menu>
    </item>

</menu>