<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#737373"
    tools:context=".LockDiary">

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/tvWelcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/welcome_to_your_personal_diary"
        android:textColor="#ffde59"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvMotivationMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="204dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:text="@string/it_s_important_to_keep_track_of_your_thoughts_and_progress_writing_them_down_helps_you_reflect_grow_and_stay_on_track_with_your_goals"
        android:textColor="#FFFF8D"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeMessage"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintLongText" />

    <TextView
        android:id="@+id/tvDiaryInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/unlock_your_diary_with_biometrics"
        android:textColor="#FFFF8D"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />

    <Button
        android:id="@+id/btnUnlockWithBiometric"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:padding="14dp"
        android:text="@string/unlock_with_biometrics"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#673AB7"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917"
        app:rippleColor="#D1C4E9"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvAuthError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/authentication_failed_please_try_again2"
        android:textColor="#ffde59"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
