<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/habit_name2"
                android:enabled="true"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#673AB7">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtHabitname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="#212121"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- This layout wraps the fields that should be hidden initially -->
            <LinearLayout

                android:id="@+id/detailsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"> <!-- Initially hidden -->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description2"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="#03A9F4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDescription"
                        android:layout_width="match_parent"
                        android:enabled="false"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="#212121"
                        android:textColorHint="#757575"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/total_hours_of_habit"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="#4CAF50">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTotalHours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:enabled="false"
                        android:textColor="#212121"
                        android:textColorHint="#546E7A"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Time Spent (Clickable Text) -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_spent"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Timespent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="true"
                        android:textColor="#212121"
                        android:textColorHint="#757575"
                        tools:ignore="VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pieChart"
                    android:layout_width="match_parent"
                    android:layout_height="335dp"
                    android:layout_marginTop="20dp" />

                <Button
                    android:id="@+id/btnSaveProgress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#4CAF50"
                    android:padding="16dp"
                    android:text="@string/save_progress"
                    android:textColor="#263238"
                    tools:ignore="VisualLintButtonSize" />

                <Button
                    android:id="@+id/btnCompleteHabit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#673AB7"
                    android:padding="16dp"
                    android:text="@string/btnCompleteHabit"
                    android:textColor="#FFFFFF"
                    tools:ignore="VisualLintButtonSize" />

                <Button
                    android:id="@+id/btnDeleteHabit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#E91E63"
                    android:padding="16dp"
                    android:text="@string/btnDeleteHabit"
                    android:textColor="#000000"
                    tools:ignore="VisualLintButtonSize,VisualLintBounds" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
